--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body {
   flex-direction: column;
   display: flex;
   height: 100vh;
+  background-color: #333333;
 }
 
 li,
@@ -88,7 +89,7 @@ button {
 /* Title */
 
 .header {
-  color: #3a3f58;
+  color: white;
 }
 
 /* Phrase */
@@ -171,10 +172,6 @@ button {
   right: 0;
   border-radius: 5px;
   margin: auto 0;
-}
-
-.overlay-text {
-  padding-top: 0;
 }
 
 .title {
